fix: adjust banner content vertical alignment and responsive fonts

--- a/www/components/banner/banner.css
+++ b/www/components/banner/banner.css
@@ -4,7 +4,7 @@
     min-height: 60vh;
 
     & .content {
-      padding: 120px 10px;
+      padding: 15vh 10px;
       font-size:1.7rem;
       color: white;
       text-align:center;
@@ -33,10 +33,10 @@
       min-height: 40vh;
 
       & .content {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
 
         & h1 {
-          font-size: 2rem;
+          font-size: 3rem;
         }
       }
     }
